# rust-wasm-dynamic-module-study

./: .gitignore  LICENSE.md  README.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
wasm-app/: Cargo.toml
wasm-app/src/: main.rs
wasm-module1/: Cargo.toml
wasm-module1/src/: lib.rs
wasm-module2/: Cargo.toml
wasm-module2/src/: lib.rs
