[package]
name = "wasm-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.102"}
arrow = { version = "58.0.0", default-features = false, features = ["ipc","prettyprint"] }
time = {version = "0.3.47", features = ["macros"]}
wasmtime = { version = "42.0.0"}
wasmtime-wasi = { version = "42.0.0", features = ["p1"]}
wasi-common = { version = "42.0.0"}