[package]
name = "wasm-module2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
arrow = { version = "54.3.1", default-features = false, features = ["ipc"] }
time = {version = "0.3.41", features = ["macros"]}